<resources>
    <string name="app_name">Notes</string>
    <string name="note_details">Note Details</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="adding_a_note">Adding a note</string>
    <string name="note_title">Note Title:</string>
    <string name="note_content">Note Content:</string>
    <string name="note_add_title">Enter note title</string>
    <string name="note_add_content">Enter note content</string>
    <string name="empty_notes">Note list is empty. Add notes.</string>
    <string name="delete_note_title">Deleting a note!</string>
    <string name="delete_note_description">Are you sure you want to delete this note?</string>
    <string name="enter_the_new_note_title">Enter the new note title</string>
    <string name="enter_the_new_note_content">Enter the new note content</string>
    <string name="note_editing">Note editing</string>
</resources>